2009-01-19  Jim Huang  <jserv.tw@gmail.com>

	* src/core/termview.h (CTermView::m_s_CharSet): New data member to
	indicate the character set in CTermView.

	* src/core/termview.cpp (CTermView::PasteFromClipboard),
	src/view/telnetview.cpp (CTelnetView::DoPasteFromClipboard): Properly
	handle the character set convertion during copy and paste from X
	clipboard.
	Patched by Darren Hoo <darren.hoo@gmail.com> .

2009-01-16  Jim Huang  <jserv.tw@gmail.com>

	* src/pcmanx_gtk2.cpp (main): Prevent GTK+ from catching F10.

	* src/view/telnetview.cpp (CTelnetView::OnKeyDown): Handle F1-F12
	keys.
	Patched by Darren Hoo <darren.hoo@gmail.com> .

2009-01-04  Jim Huang  <jserv.tw@gmail.com>

	* src/core/pkgver.c: New file.  Keep version information in
	libpcmanx-core.

	* src/core/Makefile.am: Ditto.

	* src/pcmanx_gtk2.cpp (main): Perform insanity checks for libpcmanx.
	If version mismatch between pcmanx-gtk2 and libpcmanx, alter window
	will show up and soon close.

2009-01-03  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* src/core/fileutil.c,
	src/view/telnetview.cpp: Remove some warnings.

2009-01-01  Jim Huang  <jserv.tw@gmail.com>

	* src/mainframe.cpp (CMainFrame::CMainFrame): PCManx main window
	doesn't provide WM_CLASS property, or to be more precise, provides
	the same as the main window. Therefore, it is not possible to
	distinguish windows (important for new-kind window managers like
	ion / ion-devel / pwm / larswm).  This is a quick fix.
	Reported by Roy Zuo <roylzuo@gmail.com>.

2008-12-15  Jim Huang  <jserv.tw@gmail.com>

	* src/view/telnetcon.cpp (CTelnetCon::Close): Fix build with
	debugging.

2008-10-01  Jim Huang  <jserv.tw@gmail.com>

	* src/view/telnetview.cpp: Fix compilation errors with gcc 4.3.
	Reported by Lyman Li <lymanrb@gmail.com>.

2008-09-25  Jason Xia  <jasonxh@gmail.com>

	* src/mainframe.cpp (CMainFrame::OnFullscreenMode)
	(CMainFrame::OnSimpleMode) (CMainFrame::OnPreference): Respect user
	preference about show/hide status bar.
